# starflate

./: .bazeliskrc  .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  environment.yml  hip_info.cpp  hip_info.hpp  kernel.cu  main.cpp  print_hip_info.cpp  ut.hpp
.github/workflows/: check.yml  ci.bazelrc
huffman/: BUILD.bazel  decode.hpp  huffman.hpp
huffman/src/: bit.hpp  bit_span.hpp  code.hpp  decode.hpp  encoding.hpp  symbol_span.hpp  table.hpp  utility.hpp
huffman/src/detail/: adjacent_node_iterator.hpp  base_view.hpp  element_base_iterator.hpp  flattened_symbol_bitsize_view.hpp  is_specialization_of.hpp  iterator_interface.hpp  static_vector.hpp  table_node.hpp  table_storage.hpp
huffman/test/: BUILD.bazel  bench.cpp  bench_results.md  bit_span_test.cpp  bit_test.cpp  code_test.cpp  decode_test.cpp  table_canonicalize_test.cpp  table_find_code_test.cpp  table_from_contents_test.cpp  table_from_data_test.cpp  table_from_frequencies_test.cpp  table_from_symbol_bitsize_test.cpp
src/: BUILD.bazel  copy.hpp  decompress.cpp  decompress.hpp  decompress_test.cpp  dummy_test.cpp  gunzip.cpp  gunzip.hpp  gunzip_main.cpp  huffman.hpp  huffman_test.cpp
src/detail/: huffman_storage.hpp
src/test/: .clang-tidy  BUILD.bazel  bench_results.md  byte_container.hpp  byte_container_test.cpp  copy_test.cpp  decompress_test.cpp  huffman.cpp  huffman_bench.cpp
src/test/data/: starfleet.html  starfleet.html.dynamic.deflate  starfleet.html.fixed.deflate
src/version/: version.cpp  version.hpp
test_ut/: BUILD.bazel  test_ut_example.cpp
toolchain/: .clang-tidy  BUILD.bazel  asan_feature_available.cpp  rules_cc-gcc-ubsan-no-sanitize-null.patch  runtime_failure.sh  std_execution_available.cpp  std_expected_available.cpp  tsan_feature_available.cpp  ubsan_feature_available.cpp
tools/: BUILD.bazel  bazel_workspace_status.sh  compressed_file.bzl  deflate_compress.py  gen_test_data.py  host_system_libraries.bzl  lcov.bzl  llvm_toolchain.bzl  llvm_toolchain_dependencies.bzl  local_config_info.bzl
version/: BUILD.bazel  version.cpp  version.hpp
