load("@bazel_clang_format//:defs.bzl", "clang_format_update")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "format_config",
    srcs = [".clang-format"],
    visibility = ["//visibility:public"],
)

clang_format_update(
    name = "clang-format",
    binary = "@llvm_16_0_toolchain//:clang-format",
    config = ":format_config",
)

buildifier(
    name = "buildifier.check",
    lint_mode = "warn",
    mode = "check",
)

buildifier(
    name = "buildifier.fix",
    lint_mode = "warn",
    mode = "fix",
)
