load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "huffman",
    srcs = [
        "src/bit.hpp",
        "src/bit_span.hpp",
        "src/code.hpp",
        "src/decode.hpp",
        "src/detail/element_base_iterator.hpp",
        "src/detail/flattened_symbol_bitsize_view.hpp",
        "src/detail/is_specialization_of.hpp",
        "src/detail/iterator_interface.hpp",
        "src/detail/static_vector.hpp",
        "src/detail/table_node.hpp",
        "src/detail/table_storage.hpp",
        "src/encoding.hpp",
        "src/symbol_span.hpp",
        "src/table.hpp",
        "src/utility.hpp",
    ],
    hdrs = ["huffman.hpp"],
    visibility = ["//:__subpackages__"],
)
