load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//src:__subpackages__"])

cc_library(
    name = "decompress",
    hdrs = ["decompress.hpp"],
)

cc_library(
    name = "gunzip",
    srcs = ["gunzip.cpp"],
    hdrs = ["gunzip.hpp"],
    deps = ["//huffman"],
)

cc_binary(
    name = "gunzip_main",
    srcs = ["gunzip_main.cpp"],
    deps = [
        ":decompress",
        ":gunzip",
    ],
)
