load("//tools:lcov.bzl", "lcov")

genrule(
    name = "gen_verbose_clang_tidy",
    srcs = [],
    outs = ["verbose-clang-tidy.sh"],
    cmd = """
echo "$$(dirname $@)/../$(rootpath {tidy}) --enable-check-profile \\$$@" > $@
""".format(
        tidy = "@llvm_toolchain//:clang-tidy",
    ),
    executable = True,
    tools = ["@llvm_toolchain//:clang-tidy"],
)

sh_binary(
    name = "verbose-clang-tidy",
    srcs = ["verbose-clang-tidy.sh"],
    data = ["@llvm_toolchain//:clang-tidy"],
)

py_binary(
    name = "deflate_compress",
    srcs = ["deflate_compress.py"],
    visibility = ["//:__subpackages__"],
)

lcov(
    name = "lcov_list",
    instrumented_targets = [
        "//huffman",
        "//src:decompress",
    ],
    lcov_opts = [
        "--rc lcov_branch_coverage=1",
        "--list",
    ],
    test_targets = [
        "//huffman/test/...",
        "//src/test/...",
    ],
)

lcov(
    name = "lcov_html",
    instrumented_targets = [
        "//huffman",
        "//src:decompress",
    ],
    lcov_opts = [
        "--show-details",
        "--keep-descriptions",
        "--branch-coverage",
        "--highlight",
        "--missed",
        "--dark-mode",
    ],
    lcov_tool = "genhtml",
    test_targets = [
        "//huffman/test/...",
        "//src/test/...",
    ],
)
