load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

cc_test(
    name = "bit_test",
    srcs = ["bit_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "code_test",
    srcs = ["code_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "table_from_frequencies_test",
    srcs = ["table_from_frequencies_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "table_from_data_test",
    srcs = ["table_from_data_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "table_from_contents_test",
    srcs = ["table_from_contents_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "table_find_code_test",
    srcs = ["table_find_code_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_binary(
    name = "bench",
    srcs = ["bench.cpp"],
    deps = [
        "//huffman",
        "//version",
        "@google_benchmark//:benchmark_main",
    ],
)

#genrule(
#    name = "record_bench",
#    srcs = [":huffman_bench"],
#    outs = ["huffman_bench.csv"],
#)
