load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

cc_test(
    name = "bit_test",
    timeout = "short",
    srcs = ["bit_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "code_test",
    timeout = "short",
    srcs = ["code_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "table_canonicalize_test",
    timeout = "short",
    srcs = ["table_canonicalize_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "table_find_code_test",
    timeout = "short",
    srcs = ["table_find_code_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "table_from_frequencies_test",
    timeout = "short",
    srcs = ["table_from_frequencies_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "table_from_data_test",
    timeout = "short",
    srcs = ["table_from_data_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "table_from_contents_test",
    timeout = "short",
    srcs = ["table_from_contents_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "table_from_symbol_bitsize_test",
    timeout = "short",
    srcs = ["table_from_symbol_bitsize_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "bit_span_test",
    timeout = "short",
    srcs = ["bit_span_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_test(
    name = "decode_test",
    timeout = "short",
    srcs = ["decode_test.cpp"],
    deps = [
        "//huffman",
        "@boost_ut",
    ],
)

cc_binary(
    name = "bench",
    srcs = ["bench.cpp"],
    deps = [
        "//huffman",
        "//version",
        "@google_benchmark//:benchmark_main",
    ],
)

#genrule(
#    name = "record_bench",
#    srcs = [":huffman_bench"],
#    outs = ["huffman_bench.csv"],
#)
