load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "decompress_test",
    timeout = "short",
    srcs = ["decompress_test.cpp"],
    deps = [
        "//:boost_ut",
        "//src:decompress",
    ],
)

cc_test(
    name = "copy_test",
    timeout = "short",
    srcs = ["copy_test.cpp"],
    deps = [
        "//:boost_ut",
        "//src:decompress",
    ],
)
